controler pokemon + view pokemon new + migration pour le changement de type -> type_pokemon
Signed-off-by: emma puget <puget.emma@gmail.com>

--- a/app/views/pokemons/new.html.erb
+++ b/app/views/pokemons/new.html.erb
@@ -1,2 +1,10 @@
 <h1>Pokemons#new</h1>
 <p>Find me in app/views/pokemons/new.html.erb</p>
+
+<%= simple_form_for @pokemon do |f| %>
+  <%= f.input :name %>
+  <%= f.input :type_pokemon %>
+  <%= f.input :services %>
+  <%= f.input :price %>
+  <%= f.button :submit %>
+<% end %>
