--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Pokemons#index</h1>
 <p>Find me in app/views/pokemons/index.html.erb</p>
+<%= cl_image_tag 'h58em07n4cuvwfrmg7px',
+      width: 400, height: 300, crop: :fill %>
