modif index seed pokemon
Signed-off-by: Xavier Le Faou <lefaoux@hotmail.fr>

--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -2,3 +2,10 @@
 <p>Find me in app/views/pokemons/index.html.erb</p>
 <%= cl_image_tag 'h58em07n4cuvwfrmg7px',
       width: 400, height: 300, crop: :fill %>
+
+
+
+
+
+<%# <%= link_to 'New Pokemon', new_pokemons_path %> %>
+<%= link_to 'bookings', bookings_path %>
