--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,7 +2,7 @@
 
 <div data-controller="toggle" class="mt-5">
   <ul>
-  <% @pokemons.each do |pokemon| %>
+
 
       <ul>
         <% @bookings.each do |booking| %>
@@ -15,9 +15,8 @@
         <% end %>
       </ul>
 
-      <%= button_to 'Add a booking', new_pokemon_booking_path(pokemon), method: :get, class: 'btn btn-outline-primary' %>
+      <%= button_to 'Add a booking', new_booking_path, method: :get, class: 'btn btn-outline-primary' %>
 
     </li>
-  <% end %>
   </ul>
 </div>
