--- a/app/views/layouts/navbar/_navbar.html.erb
+++ b/app/views/layouts/navbar/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container-xl">
     <!-- Logo -->
     <a class="navbar-brand" href="#">
-      <img src="https://preview.webpixels.io/web/img/logos/clever-primary.svg" class="h-8" alt="...">
+      <img src="/app/assets/images/pokenull.png" class="h-8" alt="...">
     </a>
     <!-- Navbar toggle -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
