--- a/app/assets/stylesheets/components/_cards_pokemons.scss
+++ b/app/assets/stylesheets/components/_cards_pokemons.scss
@@ -1,5 +1,8 @@
-.cards-pokemon {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 20px;
+  .cardspokemon {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    margin-bottom: 50px;
+    border-radius: 20%;
 }
