--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,17 +1,53 @@
-<h1>Pokemons !!!!!!!!!!!!!!!</h1>
-<h2>Attttrraaaaapppezzzzzzzz llesssss touuuuusssss!!!!!!!!!!!!!!!
-</h2>
-<%= link_to 'New Pokemon', new_pokemon_path %>
-<div class="container">
-<% @pokemons.each do |pokemon|%>
-<div class="card" style="width: 18rem;">
-  <img src="<%= pokemon.picture.url %>" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title"><%= pokemon.name %></h5>
-    <p class="card-text">Hire this pokemon to : <%= pokemon.services %></p>
-    <%= pokemon.price %>€/day
-    <%= link_to 'Show', pokemon %>
-  </div>
-</div>
-<% end %>
+
+<div data-controller="explorer">
+  <main id="main"  style="overflow: auto;"data-explorer-target="main">
+    <div id="Home" class="bg-charizard pb-5 mb-5 position-relative overflow-hidden container-fluid">
+    </div>
+    <div class="py-5 container">
+      <div class="d-flex align-items-center justify-content-center">
+        <h1 class="mb-3">Bienvenue sur Poke-loca</h1>
+      </div>
+      <div class="align-items-center row">
+        <div class="col-xl-6 col-sm-12">
+          <%= image_tag 'pokemonHome/jigglypuff'%>
+        </div>
+        <div class="py-5 order-last order-lg-first col-xl-6 col-sm-12">
+          <h1 value="PokédExplore">Rondoudou</h1>
+          <div class="d-flex gap-2 mb-3 fade-in-top">
+            <img loading="lazy" draggable="false" width="40" src="" alt="Service">
+          </div>
+          <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores, inventore itaque fugit pariatur earum ut sequi corrupti adipisci exercitationem labore nihil rerum hic incidunt quasi quod odit odio nulla dolorem!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque enim eius itaque quis molestiae amet ab facere culpa! Autem laboriosam quod amet esse explicabo velit sed vel voluptas laborum illum!
+          </p>
+        <button data-action="click->explorer#toggle" type="button" class="button-primary w-100" style="transform: none;">
+          <!-- -->Explorer
+    </main>
+            <div id="otherContent" style="display: none;" data-explorer-target="content">
+          <h1>Pokemons !!!!!!!!!!!!!!!</h1>
+            <h2>Attttrraaaaapppezzzzzzzz llesssss touuuuusssss!!!!!!!!!!!!!!!
+            </h2>
+
+            </button>
+            <%= link_to 'New Pokemon', new_pokemon_path %>
+            <div class="container ">
+              <div class ="d-flex gap align-items-center">
+                <button data-action="click->explorer#rollback" type="button" class="button-primary w-100" style="transform: none;">Retour
+                </button>
+              </div>
+
+
+            <% @pokemons.each do |pokemon|%>
+            <div class="card" style="width: 18rem;">
+              <img src="<%= pokemon.picture.url %>" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title"><%= pokemon.name %></h5>
+                <p class="card-text">Hire this pokemon to : <%= pokemon.services %></p>
+                <%= pokemon.price %>€/day
+                <%= link_to 'Show', pokemon %>
+              </div>
+            </div>
+            <% end %>
+            </div>
+          </div>
+        </button>
 </div>
