--- a/app/views/layouts/navbar/_navbar_services.erb
+++ b/app/views/layouts/navbar/_navbar_services.erb
@@ -1,6 +1,7 @@
+<div class='container'>
 <div class="navbar-services">
 <%= link_to '/pokemons?query=courses' do %>
-  <div class="service>
+  <div class="service">
   <i class="fa-solid fa-cart-shopping"></i>
   </div>
   <% end %>
@@ -10,58 +11,59 @@
   </div>
     <% end %>
   <%= link_to '/pokemons?query=promenade' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-person-walking-with-cane"></i>
   </div>
   <% end %>
   <%= link_to '/pokemons?query=massage' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-spa"></i>
   </div>
   <% end %>
   <%= link_to '/pokemons?query=babysitting' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-baby"></i>
   </div>
   <% end %>
   <%= link_to '/pokemons?query=ménage' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-broom"></i>
   </div>
   <% end %>
   <%= link_to '/pokemons?query=jardinage' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-tree"></i>
   </div>
   <% end %>
   <%= link_to '/pokemons?query=avocat' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-scale-unbalanced-flip"></i>
   </div>
   <% end %>
   <%= link_to '/pokemons?query=massage+' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-temperature-arrow-up"></i>
   </div>
   <% end %>
   <%= link_to '/pokemons?query=tueur-à-gages' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-book-skull"></i>
   </div>
   <% end %>
   <%= link_to '/pokemons?query=braquage' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-people-robbery"></i>
   </div>
   <% end %>
   <%= link_to '/pokemons?query=ami' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-face-kiss-beam"></i>
   </div>
   <% end %>
   <%= link_to '/pokemons?query=escort' do %>
-  <div>
+  <div class="service">
   <i class="fa-solid fa-caravan"></i>
   </div>
   <% end %>
+</div>
 </div>
