--- a/app/assets/stylesheets/components/_cards_pokemons.scss
+++ b/app/assets/stylesheets/components/_cards_pokemons.scss
@@ -1,8 +1,55 @@
-  .cardspokemon {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20px;
-    margin-bottom: 50px;
-    border-radius: 20%;
+.cardspokemon {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+.card {
+  animation: mymove 5s infinite;
+  box-shadow: 5px 5px 0.1 rgba(0, 0, 0, 0.279);
+}
+
+.btn {
+  text-decoration: none;
+  animation: pulse 1.5s infinite;
+}
+
+.plante {
+  background-color: #4CAF50;
+}
+
+.poison {
+  background-color: #9C27B0
+}
+
+.eau {
+  background-color: #2196F3;
+}
+
+.feu {
+  background-color: #F44336;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
+
+@keyframes mymove {
+  50% {box-shadow: 2px 5px 7px rgba(0, 0, 0, 0.414);}
+
+  75% {box-shadow: 5px 7px 10px rgba(0, 0, 0, 0.46);}
 }
