--- a/app/views/pokemons/_accueil.html.erb
+++ b/app/views/pokemons/_accueil.html.erb
@@ -30,7 +30,7 @@
           <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores, inventore itaque fugit pariatur earum ut sequi corrupti adipisci exercitationem labore nihil rerum hic incidunt quasi quod odit odio nulla dolorem!
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque enim eius itaque quis molestiae amet ab facere culpa! Autem laboriosam quod amet esse explicabo velit sed vel voluptas laborum illum!
           </p>
-          <a href="#ancre" class="button-primary w-100">
+          <a href="/#ancre" class="button-primary w-100">
             Explorer
           </a>
         </div>
