--- a/app/views/pokemons/_accueil.html.erb
+++ b/app/views/pokemons/_accueil.html.erb
@@ -1,17 +1,21 @@
 <div class="contenttest">
   <main id="main" style="overflow: auto; height: 100vh;">
     <div class="py-5 container-fluid">
-      <%= image_tag 'pokeball/Remove Background.gif', style: 'width: 80px; height: 80px; position: absolute; top: 30px; left: 30px;' %>
+      <%= image_tag 'pokeball/Remove Background.gif', style: 'width: 100px; height: 100px; position: absolute; top: 30px; left: 30px;' %>
       <div style="display: flex; justify-content: flex-end; align-items: center;">
         <div>
-          <%= link_to 'Inscription', new_user_registration_path, class: 'btn btn-primary mx-2' %>
-          <%= link_to 'Connexion', new_user_session_path, class: 'btn btn-primary mx-2' %>
+          <% if user_signed_in? %>
+            <%= link_to 'Déconnexion', destroy_user_session_path, data: { turbo_method: :delete }, class: 'btn btn-primary mx-2' %>
+          <% else %>
+            <%= link_to 'Inscription', new_user_registration_path, class: 'btn btn-primary mx-2' %>
+            <%= link_to 'Connexion', new_user_session_path, class: 'btn btn-primary mx-2' %>
+          <% end %>
         </div>
       </div>
     </div>
     <div class="py-5 container">
       <div class="d-flex align-items-center justify-content-center">
-         <h1 id='title'></h1>
+        <h1 id='title'></h1>
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
         <script>
           var typed = new Typed('#title', {
@@ -19,7 +23,6 @@
             typeSpeed: 50,
           });
         </script>
-
       </div>
       <div class="align-items-center row">
         <div class="col-xl-6 col-sm-12">
