--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -44,6 +44,7 @@
                 <h5 class="card-title"><%= pokemon.name %></h5>
                 <p class="card-text">Hire this pokemon to : <%= pokemon.services %></p>
                 <%= pokemon.price %>€/day
+                <%= pokemon.type_pokemon %> </p>
                 <%= link_to 'Show', pokemon %>
               </div>
             </div>
