--- a/app/views/pokemons/_accueil.html.erb
+++ b/app/views/pokemons/_accueil.html.erb
@@ -26,7 +26,7 @@
       </div>
       <div class="align-items-center row">
         <div class="col-xl-6 col-sm-12">
-          <%= image_tag 'pokemonHome/jigglypuff' %>
+          <%= image_tag 'jigglypuff' %>
         </div>
         <div class="py-5 order-last order-lg-first col-xl-6 col-sm-12">
           <h1>Rondoudou</h1>
