--- a/app/views/pokemons/_accueil.html.erb
+++ b/app/views/pokemons/_accueil.html.erb
@@ -26,7 +26,7 @@
       </div>
       <div class="align-items-center row">
         <div class="col-xl-6 col-sm-12">
-          <%= image_tag 'jigglypuff' %>
+          <img src='http://res.cloudinary.com/dk3qswxut/image/upload/v1709153120/ksvrifesm2djfdrqt9ib.png'>
         </div>
         <div class="py-5 order-last order-lg-first col-xl-6 col-sm-12">
           <h1>Rondoudou</h1>
