button card + partial
Signed-off-by: emma puget <puget.emma@gmail.com>

--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -4,7 +4,7 @@
     <div class="py-5 container">
       <div class="d-flex align-items-center justify-content-center">
             <div id="otherContent" style="display;" data-explorer-target="content">
-              <%= render 'pokemon_cards' %>
+              <%= render 'pokemon_card_indexview' %>
       <% if user_signed_in? %>
         <%= link_to 'Ajouter un service', new_pokemon_path %>
       <% end %>
