--- a/app/views/pokemons/new.html.erb
+++ b/app/views/pokemons/new.html.erb
@@ -9,7 +9,7 @@
     <%= f.submit 'Create your offer' %>
   <% end %>
 
-  <%= render 'pokemon_cards' %>
+  <%= render 'pokemon_card_newview' %>
 
   <p><%= link_to "Back", pokemons_path %></p>
 </div>
