fixation de la navbar avec les cartes
Signed-off-by: Benkerroum Noureddine <noureddine.benkerroum@gmail.com>

--- a/app/assets/stylesheets/components/_navbar_services.scss
+++ b/app/assets/stylesheets/components/_navbar_services.scss
@@ -1,13 +1,14 @@
 .navbar-services {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   background: white;
   border: 1px solid #3d3d3d00;
   border-radius: 16px;
   padding: 10px;
   margin: 10px 0;
-  width: 80vh;
-  box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.4);
+  width: 6.5vh;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
   background-color: #3c3c3ce0;
 }
 
@@ -18,7 +19,12 @@
 }
 
 .service > i:hover {
- font-size: 2em;
- transition: ease 0.5s;
- color: #e6e6e6;
+  font-size: 2em;
+  transition: ease 0.5s;
+  color: #e6e6e6;
+}
+
+.service {
+  padding: 10px;
+  align-items: center;
 }
