--- a/app/views/layouts/navbar/_navbar_services.erb
+++ b/app/views/layouts/navbar/_navbar_services.erb
@@ -1,61 +1,61 @@
-<div class='container'>
+<div class='container'style="position:sticky; top:20px;">
 <div class="navbar-services">
-<%= link_to '/pokemons?query=courses' do %>
+<%= link_to '/pokemons?query=courses#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-cart-shopping"></i>
   </div>
   <% end %>
-  <%= link_to '/pokemons?query=parking' do %>
+  <%= link_to '/pokemons?query=parking#ancres' do %>
   <div class="service">
     <i class="fa-solid fa-square-parking"></i>
   </div>
     <% end %>
-  <%= link_to '/pokemons?query=promenade' do %>
+  <%= link_to '/pokemons?query=promenade#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-person-walking-with-cane"></i>
   </div>
   <% end %>
-  <%= link_to '/pokemons?query=massage' do %>
+  <%= link_to '/pokemons?query=massage#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-spa"></i>
   </div>
   <% end %>
-  <%= link_to '/pokemons?query=babysitting' do %>
+  <%= link_to '/pokemons?query=babysitting#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-baby"></i>
   </div>
   <% end %>
-  <%= link_to '/pokemons?query=ménage' do %>
+  <%= link_to '/pokemons?query=ménage#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-broom"></i>
   </div>
   <% end %>
-  <%= link_to '/pokemons?query=jardinage' do %>
+  <%= link_to '/pokemons?query=jardinage#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-tree"></i>
   </div>
   <% end %>
-  <%= link_to '/pokemons?query=avocat' do %>
+  <%= link_to '/pokemons?query=avocat#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-scale-unbalanced-flip"></i>
   </div>
   <% end %>
-  <%= link_to '/pokemons?query=massage+' do %>
+  <%= link_to '/pokemons?query=massage+#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-temperature-arrow-up"></i>
   </div>
   <% end %>
-  <%= link_to '/pokemons?query=tueur-à-gages' do %>
+  <%= link_to '/pokemons?query=tueur-à-gages#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-book-skull"></i>
   </div>
   <% end %>
-  <%= link_to '/pokemons?query=braquage' do %>
+  <%= link_to '/pokemons?query=braquage#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-people-robbery"></i>
   </div>
   <% end %>
-  <%= link_to '/pokemons?query=ami' do %>
+  <%= link_to '/pokemons?query=ami#ancres' do %>
   <div class="service">
   <i class="fa-solid fa-face-kiss-beam"></i>
   </div>
