--- a/app/assets/stylesheets/components/_cards_pokemons.scss
+++ b/app/assets/stylesheets/components/_cards_pokemons.scss
@@ -5,6 +5,12 @@
   margin-bottom: 50px;
 }
 
+.containernour {
+  display: flex;
+  justify-content: center;
+  margin-right: 10%;
+  margin-top: 50px;
+}
 .card {
   animation: mymove 5s infinite;
   box-shadow: 5px 5px 0.1 rgba(0, 0, 0, 0.279);
@@ -16,44 +22,93 @@
 }
 
 .fee {
-  background-image: linear-gradient(to bottom, #ef71ef, #fb5bd2, #ff43b3, #ff2893, #ff0472);
+  background-image: linear-gradient(
+    to bottom,
+    #ef71ef,
+    #fb5bd2,
+    #ff43b3,
+    #ff2893,
+    #ff0472
+  );
 }
 
 .combat {
-  background-image: linear-gradient(to bottom, #c26200, #d05900, #df4c00, #ef3800, #ff0b00);}
+  background-image: linear-gradient(
+    to bottom,
+    #c26200,
+    #d05900,
+    #df4c00,
+    #ef3800,
+    #ff0b00
+  );
+}
 
 .plante {
-  background-image: linear-gradient(to bottom, #3da324, #40a843, #47ac5c, #52b071, #60b384);}
+  background-image: linear-gradient(
+    to bottom,
+    #3da324,
+    #40a843,
+    #47ac5c,
+    #52b071,
+    #60b384
+  );
+}
 
 .poison {
-  background-image: linear-gradient(to bottom, #923fcc, #7836b2, #602c98, #49237f, #341966);
+  background-image: linear-gradient(
+    to bottom,
+    #923fcc,
+    #7836b2,
+    #602c98,
+    #49237f,
+    #341966
+  );
 }
 .eau {
-  background-image: linear-gradient(to left bottom, #2481ef, #00a6f0, #53c4e4, #a3dcdf, #e6f0ed);}
+  background-image: linear-gradient(
+    to left bottom,
+    #2481ef,
+    #00a6f0,
+    #53c4e4,
+    #a3dcdf,
+    #e6f0ed
+  );
+}
 
 .feu {
-   background-image: linear-gradient(to bottom, #e72322, #f25e03, #f58a00, #f3b200, #ebd812);
+  background-image: linear-gradient(
+    to bottom,
+    #e72322,
+    #f25e03,
+    #f58a00,
+    #f3b200,
+    #ebd812
+  );
 }
 
 @keyframes pulse {
-	0% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
-	}
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
 
-	70% {
-		transform: scale(1);
-		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-	}
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
 
-	100% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-	}
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
 }
 
 @keyframes mymove {
-  50% {box-shadow: 2px 5px 7px rgba(0, 0, 0, 0.414);}
+  50% {
+    box-shadow: 2px 5px 7px rgba(0, 0, 0, 0.414);
+  }
 
-  75% {box-shadow: 5px 7px 10px rgba(0, 0, 0, 0.46);}
+  75% {
+    box-shadow: 5px 7px 10px rgba(0, 0, 0, 0.46);
+  }
 }
