about et map terminés
Signed-off-by: Xavier Le Faou <lefaoux@hotmail.fr>

--- a/app/views/pages/_marker.html.erb
+++ b/app/views/pages/_marker.html.erb
@@ -1,1 +1,1 @@
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQT5Iwh-kQnzg6I--fBqHv0O-RpEcV00BUEaA&usqp=CAU"  width="30px" height="30"px alt="" >
+<img class="img-map" src="https://e7.pngegg.com/pngimages/906/501/png-clipart-pokeball-pokeball-thumbnail.png"  width="30px" height="30"px alt="" >
