--- a/app/views/pages/xavier.html.erb
+++ b/app/views/pages/xavier.html.erb
@@ -1,11 +1,1 @@
-<%= render 'layouts/navbar/navbar_services' %>
-
-<section class="propos">
-  <h2>A propos de Nous</h2>
-  <p>Nous sommes une équipe de jeunes développeurs basée à Toulouse, passionnés par la création de solutions innovantes et conviviales. Notre équipe se compose de trois membres dynamiques : Nour, surnommé le tyran pour sa détermination sans faille à résoudre les défis techniques les plus complexes ; Em', affectueusement appelée la petite Papillon pour sa créativité et sa capacité à apporter une touche artistique à nos projets ; et Xav, le joyeux, dont l'énergie et l'enthousiasme contagieux animent notre équipe et nous motivent à atteindre de nouveaux sommets. Ensemble, nous combinons nos compétences et notre passion pour offrir des solutions innovantes et de qualité à nos clients, tout en cultivant un environnement de travail collaboratif et stimulant.</p>
-
-  <div style="width: 300px; height: 300px;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="pk.eyJ1IjoieGF2dW9hZmVsIiwiYSI6ImNsc2l1b29lczI4NjIyam5vM25raGhhb3EifQ.gAWOagGX7jgeYq59vi46_g"></div>
-</section>
+<%= render 'layouts/about' %>
