--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,10 +20,6 @@ body {
   background-attachment: fixed;
 }
 
-#otherContent {
-  background-color: transparent;
-}
-
 .centered {
   text-align: center;
 }
@@ -34,4 +30,8 @@ body {
 
 .typed-cursor {
   display: none;
+}
+
+.containernour {
+  background-color: bisque;
 }
