fixation du scroll
Signed-off-by: Benkerroum Noureddine <noureddine.benkerroum@gmail.com>

--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'accueil' %>
-
+<%= render 'layouts/about' %>
     <div class="containernour">
       <div class="w-100 "style="position:sticky; top:20px; z-index: 999">
               <%= render 'layouts/navbar/navbar_services' %>
@@ -12,4 +12,3 @@
           <% end %>
         </div>
       </div>
-    <div id="spacer"></div>
