--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,13 +1,20 @@
-.propos{
+.propos {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 50px;
+  padding: 20px;
   color: white;
-  background-image: linear-gradient(to right top, #191a1a, #272928, #353837, #464945, #585954);
+  background-image: linear-gradient(
+    to right top,
+    #191a1a,
+    #272928,
+    #353837,
+    #464945,
+    #585954
+  );
 }
 
-.propos-infos{
+.propos-infos {
   display: flex;
   flex-direction: column;
   justify-content: center;
