--- a/app/assets/stylesheets/components/_navbar_services.scss
+++ b/app/assets/stylesheets/components/_navbar_services.scss
@@ -8,7 +8,7 @@
   margin: 10px 0;
   width: 80vh;
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
-  background-color: #3c3c3c36;
+  background-color: #3c3c3c;
 }
 
 .service > i {
