--- a/app/assets/stylesheets/components/_cards_pokemons.scss
+++ b/app/assets/stylesheets/components/_cards_pokemons.scss
@@ -8,33 +8,71 @@
 .card {
   animation: mymove 5s infinite;
   box-shadow: 5px 5px 0.1 rgba(0, 0, 0, 0.279);
+  max-height: 400px;
+  border: double 0.2;
+  p {
+    text-decoration: none;
+  }
 }
 
 .btn {
   text-decoration: none;
-  animation: pulse 1.5s infinite;
+  animation: pulse 5s infinite;
 }
 
 .fee {
-  background-image: linear-gradient(to bottom, #ef71ef, #fb5bd2, #ff43b3, #ff2893, #ff0472);
-}
+  background-image: linear-gradient(to right top, #ef71ef, #ef83ef, #ee93ef, #eea3ee, #edb2ed, #e9b1e9, #e6afe6, #e2aee2, #db9cdb, #d38ad3, #cc78cc, #c465c4);}
 
 .combat {
-  background-image: linear-gradient(to bottom, #c26200, #d05900, #df4c00, #ef3800, #ff0b00);}
+  background-image: linear-gradient(to right top, #ff8100, #fd8b22, #fb9536, #f99e49, #f7a75a, #eba15a, #df9b59, #d39559, #bb8047, #a36c36, #8b5825, #744514);}
 
 .plante {
-  background-image: linear-gradient(to bottom, #3da324, #40a843, #47ac5c, #52b071, #60b384);}
+  background-image: linear-gradient(to right top, #3da324, #4eac37, #5db547, #6cbe57, #7ac767, #86c05e, #91b957, #99b252, #9d993a, #9d8128, #99681e, #92501b);}
 
 .poison {
-  background-image: linear-gradient(to bottom, #923fcc, #7836b2, #602c98, #49237f, #341966);
-}
+  background-image: linear-gradient(to right top, #923fcc, #875ad8, #7d70e1, #7983e6, #7a94e8, #788fdc, #7689d1, #7484c5, #676aab, #5b5191, #4f3876, #431f5c);}
+
 .eau {
-  background-image: linear-gradient(to left bottom, #2481ef, #00a6f0, #53c4e4, #a3dcdf, #e6f0ed);}
+  background-image: linear-gradient(to right top, #2481ef, #009cfc, #00b5ff, #00ccff, #00e1fb, #00def8, #00dcf4, #00d9f1, #00beec, #00a3e4, #0087d5, #2069c0);}
 
 .feu {
-   background-image: linear-gradient(to bottom, #e72322, #f25e03, #f58a00, #f3b200, #ebd812);
+  background-image: linear-gradient(to right top, #e72324, #e9482a, #eb6234, #ec7740, #ed8a4f, #ed8e51, #ed9353, #ed9756, #ec8f4a, #ea883e, #e98031, #e77823);
 }
 
+.dragon {
+  background-image: linear-gradient(to right top, #4f60e2, #536fe5, #5b7de7, #658ae8, #7297e8, #7091db, #6e8cce, #6c86c1, #596da5, #47568a, #353f70, #3d4576);
+}
+
+.normal {
+  background-image: linear-gradient(to right top, #a0a3a0, #a9afad, #b3baba, #bec6c8, #cbd1d6, #ccd2d9, #ced3dc, #d1d3df, #c7c9d9, #bdc0d2, #b3b6cc, #a9adc6);
+}
+
+.electrik {
+  background-image: linear-gradient(to right top, #fac100, #f0c638, #e7ca56, #dfcd70, #d9cf89, #d5cc88, #d2c988, #cec687, #ccbd6e, #cab455, #c9aa3a, #c9a016);
+}
+
+.psy {
+  background-image: linear-gradient(to right top, #ef3f7a, #eb5f96, #e579ad, #de91bf, #d7a6cb, #d0a4bd, #c6a2b1, #baa1a8, #a38c8b, #897871, #6f655c, #555249);}
+
+.insecte {
+  background-image: linear-gradient(to right top, #92a312, #97a82b, #9dad3e, #a2b14e, #a8b65d, #a8b65d, #a8b65d, #a8b65d, #a2b14e, #9dad3e, #97a82b, #92a312);
+}
+
+.roche {
+  background-image: linear-gradient(to right top, #b1ab82, #b7b28e, #beb99a, #c4c1a7, #cbc8b3, #cdcab3, #d0ccb4, #d2ceb4, #d0cba8, #cfc89b, #cdc58f, #cbc282);
+}
+
+.glace {
+  background-image: linear-gradient(to right top, #3dd9ff, #4ad0ff, #59c7fc, #68bef8, #76b5f2, #72b8f4, #6dbcf6, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+}
+
+.spectre {
+  background-image: linear-gradient(to right top, #713f71, #7c507c, #876188, #937394, #9e849f, #a18498, #a18592, #9f868d, #8f7877, #7c6b65, #685f55, #555249);
+}
+
+.sol {
+  background-image: linear-gradient(to right top, #92501b, #995e2f, #a06c42, #a77955, #ad8769, #ad8769, #ad8769, #ad8769, #a77955, #a06c42, #995e2f, #92501b);
+}
 @keyframes pulse {
 	0% {
 		transform: scale(0.95);
