--- a/app/assets/stylesheets/components/_navbar_services.scss
+++ b/app/assets/stylesheets/components/_navbar_services.scss
@@ -6,7 +6,7 @@
   border-radius: 16px;
   padding: 10px;
   margin: 10px 0;
-  width: 80vh;
+  width: 50vw;
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
   background-color: #3c3c3c;
 }
