little fix for the navbar animation
Signed-off-by: alexis stephan <alexis-stephan@hotmail.fr>

--- a/app/assets/stylesheets/components/_navbar_services.scss
+++ b/app/assets/stylesheets/components/_navbar_services.scss
@@ -14,12 +14,12 @@
 .service > i {
   font-size: 1.5em;
   color: #e6e6e6;
-  transition: ease 0.5s;
+  // transition: ease 0.1s;
 }
 
 .service > i:hover {
   font-size: 2em;
-  transition: ease 0.5s;
+  transition: ease 0.1s;
   color: #e6e6e6;
 }
 
