--- a/app/views/pokemons/new.html.erb
+++ b/app/views/pokemons/new.html.erb
@@ -1,10 +1,9 @@
 <div class="container">
-  <h1>Add a new offer</h1>
-  <p>Eheh</p>
+  <h1>Vos pokemons</h1>
 
   <%= simple_form_for @pokemon do |f| %>
     <%=f.input :name, collection: Pokemon.where(user_id: nil), value_method: :name, label: "Nom du Pokémon", include_blank: false%>
-    <%=f.input :services, collection: %w[courses parking promenade nage babysitting massage menage jardinage avocat tueur-a-gages] %>
+    <%=f.input :services, collection: %w[Courses Parking Promenade Babysitting Massage Menage Jardinage Avocat Tueur-a-gages Massage+ Escort Braquage Ami] %>
     <%= f.input :price, label: 'Price/day (€)'%>
     <%= f.submit 'Create your offer' %>
   <% end %>
