button keyframe pulse + form new session and registration adapt
Signed-off-by: alexis stephan <alexis-stephan@hotmail.fr>

--- a/app/assets/stylesheets/components/_form_devise.scss
+++ b/app/assets/stylesheets/components/_form_devise.scss
@@ -1,5 +1,5 @@
 .form-inputs {
-  background-color: #f9f9f9;
+  background-color: #f9f9f926;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
