--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Je m'inscris" %>
+      <%= f.button :submit, "Je m'inscris", class: 'btn btn-primary' %>
     </div>
   <% end %>
 
