--- a/app/views/pokemons/_pokemon_card_indexview.html.erb
+++ b/app/views/pokemons/_pokemon_card_indexview.html.erb
@@ -1,18 +1,20 @@
-<div class="cardspokemon">
-  <% @pokemons.each do |pokemon| %>
-  <a href="/pokemons/<%=pokemon.id%>" class="text-decoration-none">
-    <div class="cardpokemon">
-      <div class="card rounded-4 <%=pokemon.type_pokemon.downcase.gsub('é','e') %>" style="width: 18rem;">
-        <%= cl_image_tag pokemon.picture.key, class: 'card-img-top p-2 rounded-4'%>
-          <div class="card-body">
-            <h5 class="card-title text-center fw-bolder fs-3"><%= pokemon.name %></h5>
-            <div class="d-flex justify-content-around">
-              <p class="card-text"><%= pokemon.services %></p>
-              <p class="card-text"><%= pokemon.price %>€/day</p>
+<div data-controller="card" class="cardspokemon">
+    <% @pokemons.each do |pokemon| %>
+    <a href="/pokemons/<%=pokemon.id%>" class="text-decoration-none">
+        <div data-card-target="card" class="ex1">
+            <div class="cardpokemon">
+                <div class="ex1-layer card rounded-4 <%=pokemon.type_pokemon.downcase.gsub('é','e') %>" style="width: 18rem;">
+                    <%= cl_image_tag pokemon.picture.key, class: 'card-img-top p-2 rounded-4'%>
+                    <div class="card-body">
+                        <h5 class="card-title text-center fw-bolder fs-3"><%= pokemon.name %></h5>
+                        <div class="d-flex justify-content-around">
+                            <p class="card-text"><%= pokemon.services %></p>
+                            <p class="card-text"><%= pokemon.price %>€/day</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-      </div>
-    </div>
-  </a>
-  <%end%>
+        </div>
+    </a>
+    <% end %>
 </div>
