--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -1,36 +1,32 @@
-<h1 class="text-center"><%= @pokemon.name %></h1>
-<div class="container">
-<%= cl_image_tag @pokemon.picture.key %>
+<div class="container-show">
 
-<%= @pokemon.type_pokemon%>
-<%= @pokemon.services %>
-<%= @pokemon.price %>€/day
-<%= link_to 'Back', root_path %>
+<div class="card-show <%=@pokemon.type_pokemon.downcase.gsub('é','e') %>">
+    <div class="card-show-img">
+      <h1 class="text-center"><%= @pokemon.name %></h1>
+      <%= cl_image_tag @pokemon.picture.key %>
+    </div>
+    <div class="card-show-infos">
+      <p>Type: <%= @pokemon.type_pokemon%></p>
+      <p> Service :<%= @pokemon.services %></p>
+      <p>Prix:<%= @pokemon.price %>€/day</p>
+      <%= link_to 'Back', root_path, class: "btn btn-primary" %>
+    </div>
 </div>
 
-<div class="card shadow p-3 mb-5 bg-white rounded" style="width: 80%; max-width: 600px;">
-    <div class="row">
+<div class="bookings-grid">
+  <div class="booking">
       <% @bookings.each do |booking| %>
         <div class="col-md-4">
           <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title"><%= booking.pokemon.name %></h5>
-                  <p class="card-text">Durée : <%= (booking.end_date - booking.start_date).to_i %> jours</p>
-                  <p class="card-text">Prix total : <%= booking.pokemon.price * (booking.end_date - booking.start_date).to_i %>€</p>
-                  <%# <%= render 'delete', booking: pokemon_booking %>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
 
-<div class="container">
-  <div class="d-flex justify-content-center">
-    <%= simple_form_for [@pokemon, @booking] do |f| %>
-      <%= f.input :start_date, label: 'Start date of reveservation', error: 'You need to be sign in to book' %>
-      <%= f.input :end_date, label: 'End date of reservation', hint: 'No special characters.' %>
-      <%= f.button :submit, class:'text-center btn btn-danger rounded' %>
-    <% end %>
-  </div>
+              <h5 ><%= booking.pokemon.name %></h5>
+                  <p >Durée : <%= (booking.end_date - booking.start_date).to_i %> jours</p>
+                  <p >Prix total : <%= booking.pokemon.price * (booking.end_date - booking.start_date).to_i %>€</p>
+                  <%# <%= render 'delete', booking: pokemon_booking %>
+
+      <% end %>
+      </div>
+</div>
+
+
 </div>
